--- a/eng/index.html
+++ b/eng/index.html
@@ -91,7 +91,7 @@
                         <ul class="list-inline">
                             <li><a href="https://www.facebook.com/profile.php?id=100005897088738" target="_blank" class="social-icons"><i class="icon-facebook-logo"></i></a></li>
                             <li><a href="https://vk.com/aytkuluevb" target="_blank" class="social-icons"><i class="icon-insta"></i></a></li>
-                            <li><a href="https://www.instagram.com/aivuch_/" target="_blank" class="social-icons"><i class="icon-instagram-logo"></i></a></li>
+                            <li><a href="https://www.instagram.com/_aivuch/" target="_blank" class="social-icons"><i class="icon-instagram-logo"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -118,8 +118,8 @@
                                 Accountant, front-end developer, content creator, brand creator, just a person. Fast
                                 learner, punctuality, swiftness, performance, hard work, responsibility, stress
                                 resistance.I graduated from BFET them. A. Toktonalievs with an assessment - "Excellent."
-                                I’m leading a sporty lifestyle, without bad habits, I have been professionally involved in
-                                football for 4 years.</p>
+                                I’m leading a sporty lifestyle, without bad habits, in my free time I play football.
+                                 <span > <a href="https://github.com/bekoou" class="link-git">Link to my git-profile.</a></span></p>
                               </div>
 
                         <!-- Progress Box -->
@@ -145,6 +145,12 @@
                             <h5>Photoshop <span class="color-heading pull-right">70%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Git <span class="color-heading pull-right">75%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
