--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en" class="no-js">
-<!-- BEGIN HEAD -->
 <head>
     <meta charset="utf-8"/>
     <title>Айткулуев Бексултан</title>
@@ -13,19 +11,13 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css"/>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./css/icomoon.css">
-
     <link href="css/animate.css" rel="stylesheet">
-
-
     <!-- THEME STYLES -->
-
     <link href="css/layout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="./css/media.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./img/Vector.png"/>
 </head>
-<!-- END HEAD -->
-
 <!-- BODY -->
 <body id="body" data-spy="scroll" data-target=".header">
 
@@ -34,7 +26,6 @@
     <!-- Navbar -->
     <nav class="navbar" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="menu-container js_nav-item">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -50,8 +41,6 @@
                 </div>
                 <!-- End Logo -->
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse nav-collapse">
                 <div class="menu-container">
                     <ul class="nav navbar-nav navbar-nav-right">
@@ -65,13 +54,11 @@
                     </ul>
                 </div>
             </div>
-            <!-- End Navbar Collapse -->
         </div>
     </nav>
     <!-- Navbar -->
 </header>
 <!--========== END HEADER ==========-->
-
 <!--========== SLIDER ==========-->
 <div class="promo-block parallax-window" data-parallax="scroll"  >
     <div class="container">
@@ -84,17 +71,14 @@
                 <ul class="list-inline">
                     <li><a href="https://www.facebook.com/profile.php?id=100005897088738" target="_blank" class="social-icons"><i class="icon-facebook-logo"></i></a></li>
                     <li><a href="https://vk.com/aytkuluevb" target="_blank" class="social-icons"><i class="icon-insta"></i></a></li>
-                    <li><a href="https://www.instagram.com/aivuch_/" class="social-icons"><i class="icon-instagram-logo"></i></a></li>
+                    <li><a href="https://www.instagram.com/_aivuch/" class="social-icons" target="_blank"><i class="icon-instagram-logo"></i></a></li>
                 </ul>
             </div>
         </div>
-        <!--// end row -->
     </div>
 </div>
 <!--========== SLIDER ==========-->
-
 <!--========== PAGE LAYOUT ==========-->
-<!-- About -->
 <div id="about">
     <div class="container content-lg">
         <div class="row">
@@ -108,10 +92,9 @@
                 <div class="margin-b-60">
                     <p>Привет, я Айткулуев Бексултан
                         <br>
-                        Начинающий бухгалтер, front end разработчик, контент менеджер и просто студент. Быстрая обучаемость, пунктуальность, стремительность, трудолюбие, ответственность, стрессоустойчивость. Я закончил BFET им. А. Токтоналиева с оценкой - «Отлично». Я веду спортивный образ жизни, без вредных привычек, профессионально занимался футболом уже 4 года.</p>
+                        Начинающий бухгалтер, front end разработчик, контент менеджер и просто студент. Быстрая обучаемость, пунктуальность, стремительность, трудолюбие, ответственность, стрессоустойчивость. Я закончил BFET им. А. Токтоналиева с оценкой - «Отлично». Я веду спортивный образ жизни, без вредных привычек, в свободное время занимаюсь футболом. <span ><a
+                                href="https://github.com/bekoou" target="_blank" class="link-git">Ссылка на мой гит-профиль.</a></span></p>
                 </div>
-
-                <!-- Progress Box -->
                 <div class="progress-box">
                     <h5>HTML5 <span class="color-heading pull-right">90%</span></h5>
                     <div class="progress">
@@ -136,13 +119,16 @@
                         <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                     </div>
                 </div>
-                <!-- End Progress Box -->
+                <div class="progress-box">
+                    <h5>Git <span class="color-heading pull-right">75%</span></h5>
+                    <div class="progress">
+                        <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!--// end row -->
     </div>
 </div>
-<!-- End About -->
 
 <!-- Experience -->
 <div id="experience">
