--- a/projects/worksru.html
+++ b/projects/worksru.html
@@ -46,7 +46,7 @@
                         <i class="card__btn-close fa fa-times"></i>
                         <div class="card__caption">
                             <h2 class="card__title">SPIRIT8</h2>
-                            <p class="card__subtitle">Одностраничниый сайт</p>
+                            <p class="card__subtitle">Одностраничный сайт</p>
                         </div>
                         <div class="card__copy">
                             <p>Мы - цифровое агентство с многолетним опытом и неординарными людьми.</p>
@@ -64,7 +64,7 @@
                         <i class="card__btn-close fa fa-times"></i>
                         <div class="card__caption">
                             <h2 class="card__title">Lopper</h2>
-                            <p class="card__subtitle">Одностраничниый сайт</p>
+                            <p class="card__subtitle">Одностраничный сайт</p>
                         </div>
                         <div class="card__copy">
                             <p>Этот сайт предназначен для компании Lopper, которая занимается различными разработками в сфере IT.</p>
@@ -82,7 +82,7 @@
                         <i class="card__btn-close fa fa-times"></i>
                         <div class="card__caption">
                             <h2 class="card__title">IT студия</h2>
-                            <p class="card__subtitle">Одностраничниый сайт</p>
+                            <p class="card__subtitle">Одностраничный сайт</p>
                         </div>
                         <div class="card__copy">
                             <p>Сайт был разработан для этой студии.</p>
